--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   page_transition: ^2.0.9
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
