--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   page_transition: ^2.0.9
   fluttertoast: ^8.0.9
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
