--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   page_transition: ^2.0.9
   fluttertoast: ^8.0.9
   dio: ^4.0.6
+  flutter_spinkit: ^5.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
