--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   dio: ^4.0.6
   flutter_spinkit: ^5.1.0
   shared_preferences: ^2.0.15
+  circular_bottom_navigation: ^2.2.0
+  persistent_bottom_nav_bar: any
 
 dev_dependencies:
   flutter_test:
