--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,3 +29,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+  fonts:
+    - family: Segoe     
+      fonts:
+        - asset: assets/fonts/segoe.ttf
