--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   carousel_slider: ^4.1.1
   badges: ^2.0.3
   webview_flutter: ^3.0.4
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
