--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,3 +9,4 @@ linter:
     sort_child_properties_last: false
     library_private_types_in_public_api: false
     use_build_context_synchronously: false
+    curly_braces_in_flow_control_structures: false
