--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
   carousel_slider: ^4.1.1
   badges: ^2.0.3
   webview_flutter: ^3.0.4
-  pull_to_refresh: ^2.0.0
+  dropdown_button2: ^1.8.5
+  getwidget: ^3.0.1
+  flutter_launcher_icons: ^0.10.0
+  flutter_app_name: ^0.1.1
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -37,3 +41,12 @@ flutter:
     - family: Segoe     
       fonts:
         - asset: assets/fonts/segoe.ttf
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/unisba_ic_launcher.png"
+  min_sdk_android: 21
+
+flutter_app_name:
+  name: "Unisba Sisfo"
